@@ -1723,7 +1723,8 @@ textual parts.")
 				      (looking-at "\\*"))))
 			(not (looking-at (format "%d .*\n" sequence)))))
 	    (when messagep
-	      (nnheader-message 7 "nnimap read %dk" (/ (buffer-size) 1000)))
+	      (nnheader-message-maybe
+	       7 "nnimap read %dk" (/ (buffer-size) 1000)))
 	    (nnheader-accept-process-output process)
 	    (goto-char (point-max)))
           openp)
