@@ -1,5 +1,9 @@
 2011-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* nnimap.el (nnimap-wait-for-response): Message less (bug#9540).
+
+	* nnheader.el (nnheader-message-maybe): New function.
+
 	* shr.el (shr-tag-table): Render totally broken tables better.
 
 	* mml.el (mml-generate-mime-1): Don't alter the contents if we're
